<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

    >

    <TextView
        android:id="@+id/welcome_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:textAlignment="center"
        android:text="@string/welcome_title"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:fontFamily="@font/jockey_one" />

    <Button
        android:id="@+id/to_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:background="@color/colorAccent"
        android:onClick="btn_sense"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/to_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:background="@color/colorAccent"
        android:onClick="btn_sense"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
</LinearLayout>